[package]
name = "rust_spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
indicatif = "0.18.2"
rand = "0.8"
scraper = "0.24.0"
spider = "2.37.169"
tokio = "1.48.0"
reqwest = "0.12.24"
regex = "1.12.2"
url = "2.5.7"
fake-useragent = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
