[package]
name = "rust_spider"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
indicatif = "0.18.2"
rand = "0.8"
scraper = "0.24.0"
spider = "2.37.169"
tokio = "1.48.0"
reqwest = "0.12.24"
regex = "1.12.2"
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }
env_logger = "0.11.8"
fake_user_agent = "0.2.2"
egui = "0.33.0"
eframe = "0.33.0"
rfd = "0.15.4"
